--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,26 @@
 
+/***overlay con jquery**********/
+#overlay{
+	background: rgba(0,0,0,0.7);/*ultio valor es la opacidad*/
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	text-align: center;
+	display: none;/*para que muestre al comienzo*/
+}
+
+#overlay img{
+	margin-top: 10%;
+}
+
+#overlay  p {
+	color: white;
+}
+
+
+
 /***GENERAL**/
 a {
 	text-decoration: none;
@@ -166,4 +188,17 @@ footer {
 	background-size: 20px 20px;
 	padding: 0 0 0 30px;
 	margin: 0 0 10px;
+}
+
+@media (min-width: 320px) and (max-width: 568px)
+{
+	#menu ul{
+		display: none;
+	}
+}
+@media (min-width: 568px)
+{
+	#menu select, #menu button {
+		display: none;
+	}
 }
